add restart and shutdown